# weble

./: .gitignore  ARCHITECTURE.md  BACKEND_ANALYSIS_SUMMARY.txt  BACKEND_API_ANALYSIS.md  BACKEND_DETAILED_COMPARISON.md  COMPLETION_SUMMARY.txt  DEV_SERVERS_QUICKSTART.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  FRONTEND_IMPLEMENTATION.md  FRONTEND_SUMMARY.md  FRONTEND_TESTING_GUIDE.md  IMPLEMENTATION_PDF_IMPROVEMENTS.md  IMPLEMENTATION_REFERENCE.md  PDF_EXPORT_IMPLEMENTATION.md  PDF_EXPORT_IMPLEMENTATION_PLAN.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PIPELINE_ARCHITECTURE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RESEARCH_SUMMARY.md  TESTING_IMPLEMENTATION.md  TESTING_SESSION_SUMMARY.md  WEBGL_AMD_FIX.md  WEBGL_FIX_SUMMARY.md  biurko standard.step  skills-lock.json
backend/: .env.example  PHASE3_QUICKREF.md  PHASE3_SUMMARY.md  README.md  debug_path.py  pyproject.toml  test_output.txt  test_phase1_enhancements.py  test_results.txt
backend/app/: container.py  main.py
backend/app/api/v1/endpoints/: health.py  jobs.py  step.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: factory.py  in_memory_repository.py  memory.py  postgres_repository.py  repositories.py  sqlite_repository.py
backend/app/models/: schemas.py
backend/app/services/: assembly_generator.py  exploded_view_generator.py  llm_assembly_generator.py  parts_extractor.py  pdf_generator.py  progress_tracker.py  step_loader.py  svg_generator.py
backend/app/utils/: test_runner.py
backend/app/workers/: pipeline.py
backend/tests/: conftest.py  test_api_endpoints.py  test_assembly_generator.py  test_assembly_generator_phase3.py  test_async_step_loader.py  test_db_repositories.py  test_exploded_view_generator.py  test_llm_assembly_generator.py  test_parts_extractor.py  test_phase2_integration.py  test_phase3_integration.py  test_phase3_performance.py  test_real_stp_integration.py  test_sse_progress.py  test_step_loader.py  test_svg_generator.py  test_upload_repository_integration.py
frontend/: FRONTEND_BUILD_PROGRESS.md  IMPLEMENTATION_PLAN.md  README.md  build-output.txt  index.html  next.config.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Canvas3D.tsx  ErrorModal.tsx  (+5 more)
frontend/hooks/: use3DGeometry.ts  useProgress.ts
frontend/services/: api.ts
frontend/store/: appStore.ts
frontend/types/: index.ts
frontend/utils/: geometry.ts
(+39 files in other folders)
